modify profile tag comment, event comment style

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -129,7 +129,7 @@ footer
       height: 3.5rem
 
     #insertbox:hover
-      color: var(--fontcolor-placeholder-hover)
+      color: #888888 //var(--fontcolor-placeholder-hover)
 
     #insertbox
       display: flex
