--- a/templates/navbar.pug
+++ b/templates/navbar.pug
@@ -115,3 +115,6 @@ header
       li
         a#profile.button(href="{% url 'login' %}" title="登入")
       {% endif %}
+  
+  {% load static %}
+  image#gotop(src="{% static 'file/gotop.png' %}")  
