--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -280,6 +280,25 @@ a
                 color: #777777
                 font-weight: 700
                 //background-color: pink
+
+#gotop
+  display: none
+  position: fixed
+  border-radius: 50%
+  right: 3rem
+  bottom: 5rem
+  width: 4rem
+  height: 4rem
+  //font-size: 3rem
+  //background: rgba(250, 173, 149, 1)
+  //color: rgba(0, 0, 0, 1)
+  cursor: pointer
+  z-index: 5
+  text-align: center
+
+//#gotop:hover
+  //opacity: 0.65
+  //background-color: #ffdbd0
       
 @media only screen and (max-width: 450px)
   #navbar
