--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -11,9 +11,12 @@ html
     link(href="{% sass_src 'sass/navbar.sass' %}",rel="stylesheet",type="text/css")
     link(href="{% sass_src 'sass/variable.sass' %}",rel="stylesheet",type="text/css")
     script(src="{% static 'js/jquery.min.js' %}")
+    //script(src="https://d3js.org/d3.v3.js")
+    //script(src="https://d3js.org/d3.v4.js")
+    script(src="{% static 'js/d3.v5.js' %}")
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
     
-    script(src="https://cdn.jsdelivr.net/npm/sweetalert2@11")
+    script(src="{% static 'js/sweetalert2@11.js' %}")
     //script(src="sweetalert2/dist/sweetalert2.min.js")
     //link(rel="stylesheet", href="sweetalert2/dist/sweetalert2.min.css")
   {% include 'navbar.pug' %}
@@ -115,8 +118,6 @@ html
           #virtualdiv
           #virtualdiv
             
-    {% load static %}
-    image#gotop(src="{% static 'file/gotop.png' %}")
     {% if request.user.is_authenticated %}
     #need-comment-flag(style="display: none") {{ need_comment }}
     #comment-window
