connect tag comment system with backend, cannot hide input area yet

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -736,14 +736,14 @@ footer
       font-size: 1rem
       font-weight: 500
     input
-      width: 70%
+      width: 60%
       height: 1rem
       border-radius: 1vw
       padding: 0.5rem 1rem 
-      background-color: var(--background-color-filiter)
+      background-color: var(--background-color-inut)
       border: none
       outline: none
-      margin-left: 1rem
+      margin: 0 3rem 0 1rem 
   #first-comment
     margin-top: 2.5rem
   input[type=button]
