--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -258,7 +258,7 @@ footer
             cursor: default
             border: solid 1px var(--background-color-navbar)
 
-            #sendbutton
+            .sendbutton
               width: 2rem
               height: 2rem
             
