modify homepage window UI

--- a/static/sass/variable.sass
+++ b/static/sass/variable.sass
@@ -37,7 +37,7 @@
 
   --background-color-container: #FFFFFF
   --background-color-card: #FFAD94
-  --background-color-inut: #F2F2F2
+  --background-color-input: #F2F2F2
   --background-color-input-hover: #EFFFFB
 
   --background-color-eventwindow: #75E1C7
