--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -139,7 +139,7 @@ footer
       height: 3.5rem
       width: 48vw
       border-radius: 1.2rem
-      background-color: var(--background-color-inut)
+      background-color: var(--background-color-input)
       cursor: pointer
       border: none
       text-align: left
@@ -475,7 +475,7 @@ footer
         overflow-x: hidden
         
         .eventmsg:hover
-          background-color: var(--background-color-inut)
+          background-color: var(--background-color-input)
         .eventmsg
           display: flex
           flex-direction: row
@@ -494,7 +494,7 @@ footer
             width: 2.5rem
             height: 2.5rem
             border-radius: 50%
-            background-color: var(--background-color-inut)
+            background-color: var(--background-color-input)
           
           #eventmsg-right
             display: flex
@@ -570,7 +570,7 @@ footer
           border: none
           width: 60%
           border-radius: 1rem 0 0 1rem
-          background-color: var(--background-color-inut)
+          background-color: var(--background-color-input)
           padding: 0.4rem 1.3rem 0.4rem 1rem
           font-size: 1.1rem
         
@@ -723,37 +723,41 @@ footer
     width: 1.5rem
     height: auto
   p
-    margin-left: 1.5rem
+    margin-left: 2rem
     font-size: 1.1rem
-    font-weight: 700
+    font-weight: 500
   .comment-div
     display: flex
-    margin: 1rem
-    justify-content: space-between
+    margin: 1rem 3rem 1rem 0
+    justify-content: space-evenly
     align-items: center
     flex-wrap: wrap
     p
       font-size: 1rem
       font-weight: 500
     input
-      width: 60%
-      height: 1rem
-      border-radius: 1vw
-      padding: 0.5rem 1rem 
-      background-color: var(--background-color-inut)
-      border: none
-      outline: none
-      margin: 0 3rem 0 1rem 
+      width: 50%;
+      height: 1rem;
+      border-radius: 1vw;
+      padding: 0.5rem 1rem;
+      background-color: var(--background-color-input);
+      border: none;
+      outline: none;
   #first-comment
     margin-top: 2.5rem
   input[type=button]
-    width: 15%
+    //width: 15%
     margin: 2.5rem auto 0 auto
-    border-radius: 1vw
+    border-radius: 1rem
     outline: none
     border: none
-    padding: 0.5rem 0
-    background-color: #32DEB5
+    padding: 0.5rem 1.2rem
+    font-size: 1rem
+    background-color: var(--background-color-button)
+    border: solid 2px var(--background-color-button)
+    cursor: pointer
+  input[type=button]:hover
+    background-color: var(--background-color-button-hover)
 
 #eventcreatewindow
   //display: none
@@ -827,7 +831,7 @@ footer
       padding: 0 1rem
       outline: none
       border: none
-      background-color: var(--background-color-inut)
+      background-color: var(--background-color-input)
     input[type=text]:focus
       border: 2px solid var(--border-color-input-focus)
     input[type=date]
@@ -839,7 +843,7 @@ footer
       padding: 0 1rem
       outline: none
       border: none
-      background-color: var(--background-color-inut)
+      background-color: var(--background-color-input)
       color: var(--fontcolor-placeholder)
       padding-left: 1.8rem
       margin-right: 0.7rem
@@ -854,7 +858,7 @@ footer
       padding: 0 1rem
       outline: none
       border: none
-      background-color: var(--background-color-inut)
+      background-color: var(--background-color-input)
       color: var(--fontcolor-placeholder)
       padding-left: 1rem
       margin-right: 0.7rem
@@ -876,7 +880,7 @@ footer
     
     select
       background-color: var(--background-color-input)
-      color: var(--fontcolor-placeholder)
+      color: var(--background-color-input)
       height: 2rem
       font-size: 1rem
       border-radius: 1rem
@@ -914,10 +918,10 @@ footer
       width: 100%
       background: none
       height: auto
-      font-size: 1.5rem
+      font-size: 1rem
       background-color: var(--background-color-button)
-      border-radius: 2rem
-      padding: 0.2rem 0rem
+      border-radius: 1rem
+      padding: 0.5rem 1.2rem
       text-align: center
       margin-top: 2.5rem
       border: solid 2px var(--background-color-button)
