--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -698,6 +698,77 @@ footer
         #like-n
           display: block
           //width: 70%
+  
+  #eventjoinwindow
+    position: fixed
+    display: none
+    transform: translate(-50%, -53%)
+    top: 65%
+    left: 50%
+    width: 100%
+    min-width: 35rem
+    height: 75%
+    background-color: var(--background-color-container)
+    z-index: 8
+    border-radius: 1rem 1rem 3rem 3rem
+
+    #exitbtn3
+      width: 1.5rem
+      height: 1.5rem
+      cursor: pointer
+      position: absolute
+      right: 1.5rem
+      top: 1.5rem
+
+    #eventjoincontainer
+      display: flex
+      flex-direction: column
+      align-items: center
+      flex-wrap: nowrap
+      width: 60%
+      position: absolute
+      left: 50%
+      transform: translate(-50%,25%)
+
+
+      #eventjoinhead
+        font-size: 3rem
+        font-color: var(--font-color-main)
+        argin-bottom: 1rem
+        margin-top: -2rem
+      
+      #eventjoinability 
+        border-radius: 1rem
+        background-color: #F2F2F2
+        margin-bottom: 0.7rem
+        width: 100%
+        height: 4rem
+
+        #abilityhead
+          padding-top: 0.7rem
+          padding-left: 1rem
+
+      #eventjoinreason 
+        border-radius: 1rem
+        background-color: #F2F2F2
+        margin-bottom: 0.7rem
+        width: 100%
+        height: 6rem
+        
+        #reason
+          padding-top: 0.7rem
+          padding-left: 1rem
+
+      .eventjoinbtn
+        border-radius: 3rem
+        background-color: var(--border-color-eventwindow)
+        cursor: pointer
+        font-size: 1rem
+        width: 5rem;
+        height: 2.5rem;
+        
+
+
 
 #comment-window
   position: fixed
@@ -722,6 +793,7 @@ footer
     right: 1rem
     width: 1.5rem
     height: auto
+    cursor: pointer
   p
     margin-left: 2rem
     font-size: 1.1rem
@@ -867,7 +939,6 @@ footer
     textarea
       border-radius: 1rem
       background-color: var(--background-color-input)
-      border-radius: 1rem
       margin-bottom: 0.7rem
       padding: 1rem 1rem
       outline: none
