--- a/static/sass/variable.sass
+++ b/static/sass/variable.sass
@@ -15,7 +15,7 @@
   --fontcolor-placeholder: #B9B9B9
   --fontcolor-placeholder-hover: #EFFFFB
 
-  --background-color: #FFF6ED
+  --background-color: #FFFCF1 //#FFF6ED
   --background-color-navbar: #FFAD94
   --background-color-userpic: #FFFFFF
 
