--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -250,6 +250,7 @@ footer
             border-radius: 50%
             color: #555555
             font-size: 1.1rem
+            font-weight: 700
 
           .tag-comment
             display: none
@@ -259,7 +260,7 @@ footer
             justify-content: flex-start;
             align-items: stretch;
             position: absolute
-            top: 2.1rem
+            top: 2.3rem
             background-color: var(--background-color-event)
             border-radius: 1rem
             z-index: 4
@@ -269,7 +270,7 @@ footer
             padding: 0.7rem
             cursor: default
             border: solid 1px var(--background-color-navbar)
-
+            box-shadow: 0.1rem 0.15rem 0.3rem 0.2rem var(--boxshadow-color)
             .sendbutton
               width: 2rem
               height: 2rem
@@ -289,7 +290,8 @@ footer
                 border-radius: 50%
                 background-color: #DDD
               .comment-insert
-                width: 12rem //9rem
+                width: 8rem //9rem
+                margin: 0 0.5rem 0 0
                 background-color: #EEE //var(--background-color-description)
               .comment-insert::-webkit-input-placeholder
                 color: #888888
@@ -307,7 +309,7 @@ footer
                 flex-wrap: nowrap
                 justify-content: flex-start;
                 align-items: center
-                margin: 1rem 0.75rem
+                margin: 0.6rem 0.5rem
 
                 #cmtfrom
                   background-color: var(--background-color-navbar)
@@ -319,6 +321,7 @@ footer
                   background-color: var(--background-color-intro)
                   width: 83%
                   border-radius: 0.7rem
+                  margin: 0 0 0 0.5rem
                   p
                     text-align: left
 
