fix homepage event comment ajax prob

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -17,17 +17,16 @@ input, textarea, button, select, a
 body
   background-color: var(--background-color)
 
-//排除設定body的scroll bar，使用預設
-  ::-webkit-scrollbar
-    width: 4px
-  ::-webkit-scrollbar-track
-    background: transparent //#f1f1f1
-    border-radius: 5px
-  ::-webkit-scrollbar-thumb
-    background: #CCC
-    border-radius: 2px
-  ::-webkit-scrollbar-thumb:hover
-    background: #888
+::-webkit-scrollbar
+  width: 4px
+::-webkit-scrollbar-track
+  background: transparent //#f1f1f1
+  border-radius: 5px
+::-webkit-scrollbar-thumb
+  background: #CCC
+  border-radius: 2px
+::-webkit-scrollbar-thumb:hover
+  background: #888
 
 a
   text-decoration: none
@@ -951,7 +950,7 @@ footer
     
     select
       background-color: var(--background-color-input)
-      color: var(--background-color-input)
+      color: #888 //var(--fontcolor-placeholder)
       height: 2rem
       font-size: 1rem
       border-radius: 1rem
