--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -168,7 +168,7 @@ a
       height: 2rem
       background-color: white
       border-radius: 50%
-      border: solid #888888 0.15rem
+      border: solid var(--border-color-userpic) 0.15rem
       #userpic
         width: 2rem
         height: 2rem
