--- a/static/sass/variable.sass
+++ b/static/sass/variable.sass
@@ -1,6 +1,21 @@
 \:root
-  //
-    gobal
+  
+  //基本顏色 （數字大 淺
+  --orange-1: #FFAD94
+  --orange-2: #FFC5B3
+  --orange-3: #FFC5B3
+  
+  --green-1: #75E1C7
+  --green-2: #9FE4D4
+  --green-3: #C4EFE5
+  
+  --blue: #6FD6F8
+  --yellow: #F9D567
+  --red: F87171
+  --ricewhite: FFFCF1
+
+
+  //gobal
 
   --font-family-header: "Noto Sans TC", "Tahoma", "Arial"
   --font-style-header: normal
@@ -10,7 +25,8 @@
 
   --fontcolor-reverse: #000000
   --fontcolor-main:  #000000
-  --fontcolor-second: #828282  
+  --fontcolor-second: #828282
+  --fontcolor-third: #4F4F4F
 
   --fontcolor-placeholder: #B9B9B9
   --fontcolor-placeholder-hover: #EFFFFB
@@ -23,17 +39,15 @@
   --background-color-button-hover: #85F5DA
   --background-color-button-disable: #2CBD9A
 
-  --border-color-userpic: #888888
+  --border-color-userpic: #EEEEEE
   --boxshadow-color: rgba(0, 0, 0, 0.25)
 
-  //
-    navbar
+  //navbar
 
   --fontcolor-navbarbutton: #000000
   --background-color-searchbar: #FFE4DC
 
-  //
-    homepage
+  //homepage
 
   --background-color-container: #FFFFFF
   --background-color-card: #FFAD94
@@ -47,8 +61,7 @@
   --border-color-eventwindow: #75E1C7
   --border-color-input-focus: #BDBDBD
 
-  //
-    pofile
+  //pofile
 
   --background-color-intro: #FFE4DC
   --background-color-freind: #FFFFFF
